--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
       <!-- CTA escritorio -->
       <a
-        href="https://wa.me/593990945636?text=Hola%20Cristian%2C%20acabo%20de%20ver%20la%20oferta%20de%20la%20p%C3%A1gina%20de%20480%20gratis%20y%20quiero%20aprovechar%20pagando%20solo%20los%2097%20USD%20de%20dominio%20y%20hosting."
+        href="https://wa.me/593990945636?text=Hola%2C%20acabo%20de%20ver%20la%20oferta%20de%20la%20p%C3%A1gina%20de%20480%20gratis%20y%20quiero%20aprovechar%20pagando%20solo%20los%2097%20USD%20de%20dominio%20y%20hosting."
         target="_blank"
         class="hidden md:inline-flex btn-primary-hotmart"
       >
@@ -197,7 +197,7 @@
         <a href="#faq" class="hover:text-clturq transition">Preguntas frecuentes</a>
         <a href="#final" class="hover:text-clturq transition">Último paso</a>
         <a
-          href="https://wa.me/593990945636?text=Hola%20Cristian%2C%20acabo%20de%20ver%20la%20oferta%20de%20la%20p%C3%A1gina%20de%20480%20gratis%20y%20quiero%20aprovechar%20pagando%20solo%20los%2097%20USD%20de%20dominio%20y%20hosting."
+          href="https://wa.me/593990945636?text=Hola%2C%20quiero%20aprovechar%20la%20oferta%20de%20la%20p%C3%A1gina%20de%20480%20gratis.%20Estoy%20listo%20para%20pagar%20solo%20los%2097%20USD%20del%20dominio%20y%20hosting."
           target="_blank"
           class="mt-2 btn-primary-hotmart justify-center"
         >
@@ -230,7 +230,7 @@
 
           <p class="text-sm sm:text-base text-white/75 mb-3">
             Solo por haber dado el primer paso y estar aquí, el diseño completo de tu
-            <strong>página web de ventas</strong> va por mi cuenta.
+            <strong>página web de ventas</strong> va por cuenta de <strong>CL Tech Solutions</strong>.
           </p>
           <p class="text-sm sm:text-base text-white/75 mb-4">
             Tú solo cubres el <strong class="text-clturq text-base">$97 USD</strong> del dominio y hosting por 1 año.
@@ -271,7 +271,7 @@
           <!-- CTAs principales -->
           <div class="flex flex-col sm:flex-row gap-3 mb-3">
             <a
-              href="https://wa.me/593990945636?text=Hola%20Cristian%2C%20quiero%20aprovechar%20la%20oferta%20de%20la%20p%C3%A1gina%20de%20480%20gratis.%20Estoy%20listo%20para%20pagar%20solo%20los%2097%20USD%20del%20dominio%20y%20hosting."
+              href="https://wa.me/593990945636?text=Hola%2C%20quiero%20aprovechar%20la%20oferta%20de%20la%20p%C3%A1gina%20de%20480%20gratis%20de%20CL%20Tech%20Solutions.%20Estoy%20listo%20para%20pagar%20solo%20los%2097%20USD%20del%20dominio%20y%20hosting."
               target="_blank"
               class="btn-primary-hotmart"
             >
@@ -333,7 +333,7 @@
           </div>
 
           <p class="text-[11px] text-white/60 text-center px-2">
-            No te voy a llenar de efectos raros. Te voy a dejar una página <strong>sencilla, limpia y vendedora</strong>,
+            No te vamos a llenar de efectos raros. Te vamos a dejar una página <strong>sencilla, limpia y vendedora</strong>,
             como las que hacen que la gente saque la tarjeta en los embudos de Hotmart.
           </p>
         </div>
@@ -356,7 +356,7 @@
               <li>• Ya vendes algo (comida, servicios, productos), aunque sea solo por WhatsApp o redes.</li>
               <li>• Te sientes emprendedor luchador: madrugas, trabajas, y no estás esperando que “alguien te rescate”.</li>
               <li>• Sabes que tu tiempo vale más que seguir posponiendo esto un año más.</li>
-              <li>• Estás dispuesto a enviar la información que te pida y responder mensajes.</li>
+              <li>• Estás dispuesto a enviar la información que te pida el equipo y responder mensajes.</li>
             </ul>
           </div>
           <div class="card-hotmart px-5 py-5">
@@ -372,7 +372,7 @@
 
         <div class="mt-7 flex flex-col items-center gap-3">
           <a
-            href="https://wa.me/593990945636?text=Hola%20Cristian%2C%20me%20identifico%20con%20la%20parte%20de%20emprendedor%20luchador%20y%20s%C3%A9%20que%20esta%20oferta%20es%20para%20m%C3%AD.%20Quiero%20mi%20p%C3%A1gina%20de%20480%20gratis%2C%20pagando%20solo%20los%2097%20USD."
+            href="https://wa.me/593990945636?text=Hola%2C%20me%20identifico%20con%20la%20parte%20de%20emprendedor%20luchador%20y%20s%C3%A9%20que%20esta%20oferta%20de%20CL%20Tech%20Solutions%20es%20para%20m%C3%AD.%20Quiero%20mi%20p%C3%A1gina%20de%20480%20gratis%2C%20pagando%20solo%20los%2097%20USD."
             target="_blank"
             class="btn-primary-hotmart"
           >
@@ -407,7 +407,7 @@
           <div class="grid sm:grid-cols-3 gap-3 text-xs text-white/80 mb-6">
             <div class="card-hotmart px-3 py-3">
               <p class="font-semibold text-clturq mb-1">No necesitas saber de webs</p>
-              <p>Yo me encargo del técnico. Tú solo me dices qué vendes y con qué nombre.</p>
+              <p>CL Tech Solutions se encarga de lo técnico. Tú solo dices qué vendes y con qué nombre.</p>
             </div>
             <div class="card-hotmart px-3 py-3">
               <p class="font-semibold text-clturq mb-1">En 48 horas ves tu página</p>
@@ -420,7 +420,7 @@
           </div>
 
           <a
-            href="https://wa.me/593990945636?text=Hola%20Cristian%2C%20ya%20entend%C3%AD%20lo%20que%20recibo%20por%20los%2097%20USD%20y%20quiero%20que%20hagamos%20mi%20p%C3%A1gina%20de%20480%20gratis."
+            href="https://wa.me/593990945636?text=Hola%2C%20ya%20entend%C3%AD%20lo%20que%20recibo%20por%20los%2097%20USD%20y%20quiero%20que%20CL%20Tech%20Solutions%20haga%20mi%20p%C3%A1gina%20de%20480%20gratis."
             target="_blank"
             class="btn-primary-hotmart"
           >
@@ -457,8 +457,8 @@
           </div>
 
           <p class="mt-3 text-[11px] text-white/60">
-            La única razón por la que hago esto así es porque quiero que más emprendedores entren al juego digital,
-            y a la vez posicionar CL Tech Solutions en todo el país con casos reales.
+            La única razón por la que CL Tech Solutions hace esto así es porque quiere que más emprendedores entren al juego digital,
+            y a la vez posicionar la marca en todo el país con casos reales.
           </p>
         </div>
       </div>
@@ -492,7 +492,7 @@
               <li>• Google Maps si atiendes en un lugar físico.</li>
             </ul>
             <a
-              href="https://wa.me/593990945636?text=Hola%20Cristian%2C%20quiero%20aprovechar%20la%20oferta%20con%20el%20MODELO%201%20para%20SERVICIOS%20PROFESIONALES.%20S%C3%A9%20que%20el%20dise%C3%B1o%20vale%20480%20pero%20est%C3%A1%20gratis%20y%20solo%20pago%20los%2097%20USD."
+              href="https://wa.me/593990945636?text=Hola%2C%20quiero%20aprovechar%20la%20oferta%20con%20el%20MODELO%201%20para%20SERVICIOS%20PROFESIONALES.%20S%C3%A9%20que%20el%20dise%C3%B1o%20de%20CL%20Tech%20Solutions%20vale%20480%20pero%20est%C3%A1%20gratis%20y%20solo%20pago%20los%2097%20USD."
               target="_blank"
               class="btn-primary-hotmart mt-auto justify-center"
             >
@@ -515,7 +515,7 @@
               <li>• Estructura lista para poner QR en mesas y para delivery.</li>
             </ul>
             <a
-              href="https://wa.me/593990945636?text=Hola%20Cristian%2C%20quiero%20aprovechar%20la%20oferta%20con%20el%20MODELO%202%20para%20RESTAURANTE%20O%20COMIDA.%20S%C3%A9%20que%20el%20dise%C3%B1o%20vale%20480%20pero%20est%C3%A1%20gratis%20y%20solo%20pago%20los%2097%20USD."
+              href="https://wa.me/593990945636?text=Hola%2C%20quiero%20aprovechar%20la%20oferta%20con%20el%20MODELO%202%20para%20RESTAURANTE%20O%20COMIDA.%20S%C3%A9%20que%20el%20dise%C3%B1o%20de%20CL%20Tech%20Solutions%20vale%20480%20pero%20est%C3%A1%20gratis%20y%20solo%20pago%20los%2097%20USD."
               target="_blank"
               class="btn-primary-hotmart mt-auto justify-center"
             >
@@ -538,7 +538,7 @@
               <li>• Preparada para mostrar fotos muy llamativas.</li>
             </ul>
             <a
-              href="https://wa.me/593990945636?text=Hola%20Cristian%2C%20quiero%20aprovechar%20la%20oferta%20con%20el%20MODELO%203%20para%20HELADER%C3%8DA%20O%20POSTRES.%20S%C3%A9%20que%20el%20dise%C3%B1o%20vale%20480%20pero%20est%C3%A1%20gratis%20y%20solo%20pago%20los%2097%20USD."
+              href="https://wa.me/593990945636?text=Hola%2C%20quiero%20aprovechar%20la%20oferta%20con%20el%20MODELO%203%20para%20HELADER%C3%8DA%20O%20POSTRES.%20S%C3%A9%20que%20el%20dise%C3%B1o%20de%20CL%20Tech%20Solutions%20vale%20480%20pero%20est%C3%A1%20gratis%20y%20solo%20pago%20los%2097%20USD."
               target="_blank"
               class="btn-primary-hotmart mt-auto justify-center"
             >
@@ -560,30 +560,30 @@
         <div class="grid sm:grid-cols-3 gap-4 text-sm text-left">
           <div class="card-hotmart px-4 py-4">
             <p class="text-[11px] text-white/60 mb-1">Paso 1</p>
-            <p class="font-semibold text-clturq mb-1">Me escribes por WhatsApp</p>
+            <p class="font-semibold text-clturq mb-1">Escribes por WhatsApp</p>
             <p class="text-xs text-white/80">
-              Te pregunto qué vendes, qué modelo te sirve más y aclaramos dudas. Ahí decides si avanzamos.
+              El equipo te pregunta qué vendes, qué modelo te sirve más y aclara dudas. Ahí decides si avanzas.
             </p>
           </div>
           <div class="card-hotmart px-4 py-4">
             <p class="text-[11px] text-white/60 mb-1">Paso 2</p>
-            <p class="font-semibold text-clturq mb-1">Me envías lo básico</p>
+            <p class="font-semibold text-clturq mb-1">Envías lo básico</p>
             <p class="text-xs text-white/80">
-              Nombre del negocio, datos de contacto, logo y fotos (si tienes). Si no tienes logo, igual empezamos.
+              Nombre del negocio, datos de contacto, logo y fotos (si tienes). Si no tienes logo, igual se empieza.
             </p>
           </div>
           <div class="card-hotmart px-4 py-4">
             <p class="text-[11px] text-white/60 mb-1">Paso 3</p>
-            <p class="font-semibold text-clturq mb-1">Te muestro la página en 48h</p>
+            <p class="font-semibold text-clturq mb-1">Ves tu página en 48h</p>
             <p class="text-xs text-white/80">
-              Revisamos juntos, ajustamos detalles y te explico cómo usarla para vender desde el primer día.
+              Revisan contigo, ajustan detalles y te explican cómo usarla para vender desde el primer día.
             </p>
           </div>
         </div>
 
         <div class="mt-7 flex flex-col items-center gap-3">
           <a
-            href="https://wa.me/593990945636?text=Hola%20Cristian%2C%20ya%20entend%C3%AD%20los%203%20pasos%20y%20quiero%20que%20empecemos%20con%20mi%20p%C3%A1gina%20de%20480%20gratis%2C%20pagando%20solo%20los%2097%20USD."
+            href="https://wa.me/593990945636?text=Hola%2C%20ya%20entend%C3%AD%20los%203%20pasos%20y%20quiero%20que%20CL%20Tech%20Solutions%20empiece%20con%20mi%20p%C3%A1gina%20de%20480%20gratis%2C%20pagando%20solo%20los%2097%20USD."
             target="_blank"
             class="btn-primary-hotmart"
           >
@@ -622,8 +622,8 @@
               <span class="text-clturq text-lg ml-3">+</span>
             </summary>
             <div class="mt-2 text-white/80 text-xs">
-              No. Justamente el trato es: tú haces un esfuerzo una sola vez, pagas los $97, y yo hago el esfuerzo
-              de regalarte el diseño completo de $480. Si esto ya te parece imposible, no estás listo para dar el siguiente paso.
+              No. Justamente el trato es: tú haces un esfuerzo una sola vez, pagas los $97, y CL Tech Solutions hace
+              el esfuerzo de regalarte el diseño completo de $480. Si esto ya te parece imposible, no estás listo para dar el siguiente paso.
             </div>
           </details>
 
@@ -633,8 +633,8 @@
               <span class="text-clturq text-lg ml-3">+</span>
             </summary>
             <div class="mt-2 text-white/80 text-xs">
-              No es excusa. Podemos arrancar con un diseño limpio, colores base y fotos sencillas. Luego,
-              cuando tengas logo/fotos, se pueden cambiar. Lo importante es que empieces.
+              No es excusa. Se puede arrancar con un diseño limpio, colores base y fotos sencillas. Luego,
+              cuando tengas logo/fotos, se cambian. Lo importante es que empieces.
             </div>
           </details>
 
@@ -644,8 +644,8 @@
               <span class="text-clturq text-lg ml-3">+</span>
             </summary>
             <div class="mt-2 text-white/80 text-xs">
-              No. Atiendo a emprendedores de todo Ecuador. Todo se coordina por WhatsApp, y tu página funciona
-              desde cualquier ciudad.
+              No. CL Tech Solutions atiende a emprendedores de todo Ecuador. Todo se coordina por WhatsApp,
+              y tu página funciona desde cualquier ciudad.
             </div>
           </details>
 
@@ -681,7 +681,7 @@
             </p>
           </div>
           <div class="card-hotmart px-4 py-4 border-claccent/60 border">
-            <p class="font-semibold text-clturq mb-1">Opción 2 · Escribirme ahora</p>
+            <p class="font-semibold text-clturq mb-1">Opción 2 · Escribir ahora</p>
             <p class="text-xs text-white/80">
               Asegurar tu página web de <span class="line-through text-red-400">$480</span>
               pagando solo los <strong class="text-clturq">$97 de dominio y hosting</strong>,
@@ -691,7 +691,7 @@
         </div>
 
         <a
-          href="https://wa.me/593990945636?text=Hola%20Cristian%2C%20no%20quiero%20seguir%20en%20lo%20mismo.%20Quiero%20mi%20p%C3%A1gina%20web%20de%20480%20gratis%2C%20pagando%20solo%20los%2097%20USD%20de%20dominio%20y%20hosting.%20Ay%C3%BAdame%20a%20empezar."
+          href="https://wa.me/593990945636?text=Hola%2C%20no%20quiero%20seguir%20en%20lo%20mismo.%20Quiero%20mi%20p%C3%A1gina%20web%20de%20480%20gratis%20con%20CL%20Tech%20Solutions%2C%20pagando%20solo%20los%2097%20USD%20de%20dominio%20y%20hosting.%20Ay%C3%BAdenme%20a%20empezar."
           target="_blank"
           class="btn-primary-hotmart"
         >
@@ -707,7 +707,7 @@
 
   <!-- BOTÓN FLOTANTE WHATSAPP -->
   <a
-    href="https://wa.me/593990945636?text=Hola%20Cristian%2C%20acabo%20de%20ver%20tu%20p%C3%A1gina%20de%20Impulso%20Digital%20360%20y%20quiero%20m%C3%A1s%20informaci%C3%B3n%20para%20aprovechar%20la%20oferta%20de%2097%20USD."
+    href="https://wa.me/593990945636?text=Hola%2C%20acabo%20de%20ver%20la%20p%C3%A1gina%20de%20Impulso%20Digital%20360%20de%20CL%20Tech%20Solutions%20y%20quiero%20m%C3%A1s%20informaci%C3%B3n%20para%20aprovechar%20la%20oferta%20de%2097%20USD."
     target="_blank"
     class="fixed z-40 bottom-4 right-4 sm:bottom-5 sm:right-5 h-12 w-12 sm:h-14 sm:w-14 rounded-full bg-emerald-500 flex items-center justify-center shadow-[0_18px_70px_rgba(16,185,129,0.9)]"
   >
@@ -775,4 +775,4 @@
     })();
   </script>
 </body>
-</html>
+</html>      
