--- a/gracias.html
+++ b/gracias.html
@@ -6,7 +6,7 @@
   <title>¡Gracias por aplicar! | Impulso Digital 360</title>
 
   <!-- SEO básico -->
-  <meta name="description" content="Gracias por confiar tu página web de $480 gratis a CL Tech Solutions. Revisa los próximos pasos y cómo asegurar tu lugar en Impulso Digital 360." />
+  <meta name="description" content="Gracias por confiar tu página web de $480 gratis a CL Tech Solutions. Revisa los próximos pasos y escríbenos por WhatsApp para activar tu página y recibir los datos de pago." />
   <meta name="author" content="CL Tech Solutions">
 
   <!-- Tailwind CDN -->
@@ -117,36 +117,37 @@
           </div>
 
           <h1 class="text-2xl sm:text-3xl md:text-4xl font-semibold leading-tight mb-3">
-            ¡Gracias por confiar tu página de <span class="line-through text-red-400">$480</span> a nuestro equipo!
+            ¡Gracias! Ya entraste a la lista prioritaria de <span class="text-clturq">Impulso Digital 360</span>
           </h1>
 
-          <p class="text-sm sm:text-base text-white/75 mb-4">
-            Tus datos ya llegaron al panel de <strong>CL Tech Solutions</strong> y tu solicitud
-            para entrar a <strong>Impulso Digital 360</strong> está en la fila.
+          <p class="text-sm sm:text-base text-white/75 mb-3">
+            Tus datos llegaron al equipo de <strong>CL Tech Solutions</strong> y tu página de
+            <span class="line-through text-red-400">$480</span> ya está <strong>pre-reservada</strong> dentro de esta campaña especial.
           </p>
 
           <p class="text-sm sm:text-base text-white/80 mb-6">
-            Esto ya te separa de la mayoría: la mayoría mira, duda y cierra la pestaña.
-            Tú, en cambio, <strong>levantaste la mano</strong> y dijiste: “quiero mi página web trabajando por mí”.
+            Para que no se pierda ningún mensaje y <strong>evitar spam</strong>, el siguiente paso es muy sencillo:
+            <strong>tú nos escribes primero por WhatsApp</strong> y desde ahí te pasamos los datos de pago y los siguientes pasos.
           </p>
 
           <div class="grid sm:grid-cols-2 gap-5 text-sm mb-7">
             <div class="bg-black/50 rounded-xl border border-white/10 px-4 py-4">
               <h2 class="font-semibold text-clturq mb-2 text-base">¿Qué va a pasar ahora?</h2>
               <ul class="space-y-1.5 text-white/80 text-xs sm:text-sm">
-                <li>• Revisamos tu formulario y el tipo de negocio que tienes.</li>
-                <li>• Verificamos que encajes con esta campaña especial.</li>
-                <li>• Un miembro del equipo te escribe por WhatsApp.</li>
-                <li>• Te pedimos lo mínimo: nombre, fotos, menú/servicios y detalles básicos.</li>
+                <li>• Revisamos el formulario que acabas de enviar.</li>
+                <li>• Confirmamos que tu negocio encaje con esta campaña.</li>
+                <li>• Cuando nos escribas al WhatsApp, te respondemos desde el equipo de ventas.</li>
+                <li>• Te pasamos <strong>los datos de pago</strong> y te indicamos qué información enviar para armar tu página.</li>
               </ul>
             </div>
 
             <div class="bg-black/40 rounded-xl border border-claccent/40 px-4 py-4">
-              <h2 class="font-semibold text-claccent mb-2 text-base">Lo que puedes hacer para no perder prioridad</h2>
+              <h2 class="font-semibold text-claccent mb-2 text-base">Tu contacto directo</h2>
               <ul class="space-y-1.5 text-white/80 text-xs sm:text-sm">
-                <li>• Ten a mano el <strong>nombre de tu negocio, logo y fotos</strong> que quieras usar.</li>
-                <li>• Piensa qué quieres que la gente haga al entrar: <strong>pedir, reservar o escribirte</strong>.</li>
-                <li>• Responde rápido el mensaje de WhatsApp cuando te contactemos.</li>
+                <li>• WhatsApp directo: <strong>099 963 0862</strong></li>
+                <li>• Escríbenos con el mensaje: <strong>“Quiero mi página de $480 gratis, ya llené el formulario”</strong>.</li>
+                <li>• Así tú abres la conversación y <strong>no corremos el riesgo de que el mensaje llegue a spam</strong>.</li>
+                <li>• Desde ese chat te acompañamos hasta ver tu página publicada.</li>
               </ul>
             </div>
           </div>
@@ -156,20 +157,24 @@
               <strong class="text-clturq">Mensaje directo:</strong>
             </p>
             <p>
-              Muchos dicen que quieren crecer, pero siguen esperando “el momento perfecto”.
-              Tú acabas de demostrar lo contrario. <strong>Este clic puede ser el inicio de la mejor etapa de tu negocio online.</strong>
+              Mucha gente dice que quiere crecer, pero deja todo para “después”.
+              Tú ya diste el primer paso. <strong>Ahora solo te falta un clic más</strong>:
+              escríbenos al WhatsApp y demos inicio a la página que va a representar a tu negocio en internet.
             </p>
           </div>
 
           <!-- CTAs -->
           <div class="flex flex-col sm:flex-row gap-3 mb-4">
-            <!-- Reemplaza el href con tu link oficial de pago o WhatsApp -->
+            <!-- BOTÓN PRINCIPAL: ESCRIBIR POR WHATSAPP -->
             <a
-              href="https://wa.me/593000000000?text=Hola%20vengo%20de%20la%20p%C3%A1gina%20de%20Impulso%20Digital%20360%20y%20quiero%20asegurar%20mi%20p%C3%A1gina%20web."
+              href="https://wa.me/593999630862?text=Hola%2C%20ya%20llen%C3%A9%20el%20formulario%20de%20Impulso%20Digital%20360%20y%20quiero%20mi%20p%C3%A1gina%20web%20de%20480%20gratis%20(pago%20los%2097%20de%20dominio%20y%20hosting)."
               class="btn-primary-hotmart justify-center w-full sm:w-auto text-center"
+              target="_blank"
+              rel="noopener"
             >
-              Quiero adelantarme y hablar con el equipo ahora
+              Escribir ahora por WhatsApp para activar mi página
             </a>
+
             <a
               href="/"
               class="btn-ghost text-center w-full sm:w-auto"
@@ -179,8 +184,8 @@
           </div>
 
           <p class="text-[11px] text-white/55">
-            Si ya llenaste el formulario, <strong>no vuelvas a enviarlo varias veces</strong>.  
-            Eso solo te pone más abajo en la fila. Mejor prepara tu información y está atento al WhatsApp.
+            No vuelvas a enviar el formulario varias veces.  
+            Es mejor <strong>un solo formulario enviado + un mensaje claro a WhatsApp</strong> que diez formularios repetidos.
           </p>
         </div>
 
