--- a/gracias.html
+++ b/gracias.html
@@ -6,7 +6,7 @@
   <title>¡Gracias por aplicar! | Impulso Digital 360</title>
 
   <!-- SEO básico -->
-  <meta name="description" content="Gracias por confiar tu página web de $480 gratis a CL Tech Solutions. Revisa los próximos pasos y escríbenos por WhatsApp para activar tu página y recibir los datos de pago." />
+  <meta name="description" content="Gracias por confiar tu página web a CL Tech Solutions. Revisa los próximos pasos y escríbenos por WhatsApp para activar tu página y recibir el link de pago." />
   <meta name="author" content="CL Tech Solutions">
 
   <!-- Tailwind CDN -->
@@ -97,7 +97,7 @@
         />
       </a>
       <span class="hidden sm:inline-flex badge px-3 py-1 rounded-full border border-white/15 bg-white/5 text-clturq">
-        Impulso Digital 360 · Página web de $480 gratis
+        Impulso Digital 360 · Página web de alto impacto
       </span>
     </div>
   </header>
@@ -112,54 +112,51 @@
               Paso completado ✅
             </span>
             <span class="badge px-3 py-1 rounded-full border border-claccent/40 bg-claccent/15 text-claccent">
-              Emprendedor luchador detectado
+              Emprendedor en acción
             </span>
           </div>
 
           <h1 class="text-2xl sm:text-3xl md:text-4xl font-semibold leading-tight mb-3">
-            ¡Gracias! Ya entraste a la lista prioritaria de <span class="text-clturq">Impulso Digital 360</span>
+            ¡Gracias! Tu solicitud ya está registrada en <span class="text-clturq">Impulso Digital 360</span>
           </h1>
 
           <p class="text-sm sm:text-base text-white/75 mb-3">
-            Tus datos llegaron al equipo de <strong>CL Tech Solutions</strong> y tu página de
-            <span class="line-through text-red-400">$480</span> ya está <strong>pre-reservada</strong> dentro de esta campaña especial.
+            Tus datos llegaron correctamente al equipo de <strong>CL Tech Solutions</strong>.
           </p>
 
           <p class="text-sm sm:text-base text-white/80 mb-6">
-            Para que no se pierda ningún mensaje y <strong>evitar spam</strong>, el siguiente paso es muy sencillo:
-            <strong>tú nos escribes primero por WhatsApp</strong> y desde ahí te pasamos los datos de pago y los siguientes pasos.
+            Ahora viene el paso más importante: <strong>abrir el canal directo con nosotros por WhatsApp</strong>
+            para que podamos enviarte el link de pago y la información para terminar de activar tu página web.
           </p>
 
           <div class="grid sm:grid-cols-2 gap-5 text-sm mb-7">
             <div class="bg-black/50 rounded-xl border border-white/10 px-4 py-4">
-              <h2 class="font-semibold text-clturq mb-2 text-base">¿Qué va a pasar ahora?</h2>
+              <h2 class="font-semibold text-clturq mb-2 text-base">¿Qué hemos hecho hasta aquí?</h2>
               <ul class="space-y-1.5 text-white/80 text-xs sm:text-sm">
-                <li>• Revisamos el formulario que acabas de enviar.</li>
-                <li>• Confirmamos que tu negocio encaje con esta campaña.</li>
-                <li>• Cuando nos escribas al WhatsApp, te respondemos desde el equipo de ventas.</li>
-                <li>• Te pasamos <strong>los datos de pago</strong> y te indicamos qué información enviar para armar tu página.</li>
+                <li>• Guardamos tu solicitud con los datos que acabas de enviar.</li>
+                <li>• Registramos tu interés en tener tu página funcionando cuanto antes.</li>
+                <li>• Dejamos listo el siguiente paso para continuar por WhatsApp.</li>
               </ul>
             </div>
 
             <div class="bg-black/40 rounded-xl border border-claccent/40 px-4 py-4">
-              <h2 class="font-semibold text-claccent mb-2 text-base">Tu contacto directo</h2>
+              <h2 class="font-semibold text-claccent mb-2 text-base">¿Qué necesitas hacer ahora?</h2>
               <ul class="space-y-1.5 text-white/80 text-xs sm:text-sm">
-                <li>• WhatsApp directo: <strong>099 963 0862</strong></li>
-                <li>• Escríbenos con el mensaje: <strong>“Quiero mi página de $480 gratis, ya llené el formulario”</strong>.</li>
-                <li>• Así tú abres la conversación y <strong>no corremos el riesgo de que el mensaje llegue a spam</strong>.</li>
-                <li>• Desde ese chat te acompañamos hasta ver tu página publicada.</li>
+                <li>• Tocar el botón de abajo para escribirnos directamente por WhatsApp.</li>
+                <li>• Enviar el mensaje que ya verás escrito automáticamente.</li>
+                <li>• Esperar nuestra respuesta con el <strong>link de pago</strong> y los <strong>pasos para enviar la información de tu negocio</strong>.</li>
               </ul>
             </div>
           </div>
 
           <div class="border border-white/10 rounded-xl px-4 py-4 mb-6 text-xs sm:text-sm text-white/70">
             <p class="mb-1">
-              <strong class="text-clturq">Mensaje directo:</strong>
+              <strong class="text-clturq">En palabras simples:</strong>
             </p>
             <p>
-              Mucha gente dice que quiere crecer, pero deja todo para “después”.
-              Tú ya diste el primer paso. <strong>Ahora solo te falta un clic más</strong>:
-              escríbenos al WhatsApp y demos inicio a la página que va a representar a tu negocio en internet.
+              Ya diste el primer paso llenando el formulario.  
+              Ahora solo falta que nos envíes el primer mensaje por WhatsApp para que nuestro equipo pueda acompañarte
+              personalmente hasta ver tu página publicada.
             </p>
           </div>
 
@@ -167,12 +164,12 @@
           <div class="flex flex-col sm:flex-row gap-3 mb-4">
             <!-- BOTÓN PRINCIPAL: ESCRIBIR POR WHATSAPP -->
             <a
-              href="https://wa.me/593999630862?text=Hola%2C%20ya%20llen%C3%A9%20el%20formulario%20de%20Impulso%20Digital%20360%20y%20quiero%20mi%20p%C3%A1gina%20web%20de%20480%20gratis%20(pago%20los%2097%20de%20dominio%20y%20hosting)."
+              href="https://wa.me/593999630862?text=Hola%2C%20ya%20llene%20el%20formulario%20de%20Impulso%20Digital%20360%20y%20quiero%20activar%20mi%20pagina%20web%2E%20Por%20favor%20envienme%20el%20link%20de%20pago%20y%20la%20informacion%20para%20enviar%20los%20datos%20de%20mi%20negocio%2E"
               class="btn-primary-hotmart justify-center w-full sm:w-auto text-center"
               target="_blank"
               rel="noopener"
             >
-              Escribir ahora por WhatsApp para activar mi página
+              Pulsa aquí para escribirnos por WhatsApp
             </a>
 
             <a
@@ -184,14 +181,14 @@
           </div>
 
           <p class="text-[11px] text-white/55">
-            No vuelvas a enviar el formulario varias veces.  
-            Es mejor <strong>un solo formulario enviado + un mensaje claro a WhatsApp</strong> que diez formularios repetidos.
+            No es necesario que vuelvas a llenar el formulario.  
+            Con un solo formulario enviado y un mensaje claro por WhatsApp es suficiente para seguir contigo el proceso.
           </p>
         </div>
 
         <p class="mt-4 text-[11px] text-center text-white/50">
           © <span id="year"></span> CL Tech Solutions · Impulso Digital 360 ·  
-          Página web de $480 gratis · Solo pagas dominio y hosting.
+          Páginas web pensadas para vender, no solo para verse bonitas.
         </p>
       </div>
     </section>
